# lekha

./: README.md  pyproject.toml
lekha/: __init__.py  cli.py  config.py  diffing.py  processing.py  project.py  server.py
lekha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lekha/ocr/: __init__.py  kraken_engine.py  tesseract_engine.py
lekha/runtime/: __init__.py  editor.py  image_service.py  navigator.py
lekha/web/static/: app.js  index.html  styles.css
scripts/: run_e2e.py
tests/: test_cli.py  test_config.py  test_diffing.py  test_e2e.py  test_edge_cases.py  test_ocr.py  test_project.py  test_runtime_editor.py  test_server.py
tests/processing/: test_normalize_segments.py
tests/runtime/: test_image_service.py  test_navigator.py
typings/pdf2image/: __init__.pyi
typings/pytesseract/: __init__.pyi
